Commentaires HTML, nommage en anglais et en kebab-case, CSS commenté pour garder une trace temporaire

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
     box-sizing: border-box;
 }
 
+/*
 .container {
     min-width: 992px;
     max-width: 100%;
@@ -44,3 +45,4 @@ body {
 .main-nav li {
     display: inline;
 }
+*/
