Ajout d'une div pour l'icone location pour mise en forme Comments CSS et ajustements

--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,30 @@
+/* On initialise box-sizing sur tout le document */
 * {
     box-sizing: border-box;
 }
 
+/* 
+   On enlève la décoration de tous les liens (également quand ils sont sélectionnés et/ou actifs)
+   On met la police en noir
+*/
+a, a:focus, a:active {
+    text-decoration: none;
+    color: black;
+}
+
+/* On indique la police utilisée et la marge gauche sur tout le body */
 body {
     font-family: 'Raleway', serif;
     margin-left: 50px;
 }
 
+/* Flexbox sur le header afin d'avoir le logo tout à gauche et le nav tout à droite */
 header {
     display: flex;
     justify-content: space-between;
 }
 
+/* Resize le logo (pas sûr de l'utilisation de la balise h1, à voir) */
 header h1 {
     margin-top: 45px;
     margin-left: 15px;
@@ -19,11 +32,13 @@ header h1 {
     height: 45px;
 }
 
+/* L'image utilise 100% de la taille définie au-dessus */
 header h1 img {
     max-width: 100%;
     max-height: 100%;
 }
 
+/* Flexbox sur la liste, alignement vertical bas, dimensions, on enlève les puces de la liste */
 header nav ul {
     margin: 0;
     padding: 0;
@@ -33,47 +48,57 @@ header nav ul {
     display: flex;
     justify-content: space-around;
     align-items: baseline;
+    list-style-type: none;
 }
 
+/* 
+   Padding (left et right) pour espacer un peu
+   padding-top pour nous permettre d'avoir la bordure en haut
+   Bordure transparente pour éviter le décalage du texte au survol
+*/
+
 header nav ul li {
-    display: inline;
     padding-top: 45px;
     padding-left: 22px;
     padding-right: 22px;
     border-top: 2px solid transparent;
 }
 
-header nav ul li a {
-    text-decoration: none;
-    color: black;
-}
-
+/* La bordure définie au-dessus devient bleu quand la souris passe sur le li */
 header nav ul li:hover {
     border-top: 2px solid #0065FC;
 }
 
+/* Hébergements et Activités deviennent bleu au passage de la souris */
 header nav ul li:hover a {
     color: #0065FC;
 }
 
+/* Taille police et marges pour "Trouvez votre hébergement..." */
 #search-filters h2 {
     font-size: 22px;
     margin-top: 8px;
     margin-bottom: 8px;
 }
 
+/* Taille police et marges pour "En plein centre ville..." */
 #search-filters p {
     font-size: 16px;
     margin-top: 8px;
     margin-bottom: 8px;
 }
 
+/* Flexbox et marges pour tous les éléments de la barre de recherche */
 #search-bar {
     display: flex;
     margin-top: 22px;
     margin-bottom: 22px;
 }
 
+/* 
+   On insère "Rechercher" dans le bouton de recherche
+   Nécessaire pour pouvoir changer le texte en icone en version mobile
+*/
 #search-button:before {
     content:"Rechercher";
 }
@@ -86,6 +111,7 @@ header nav ul li:hover a {
 }
 */
 
+/* Marge haute pour la div filtres */
 #filters {
     margin-top: 9px;
 }
