--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 
 a, a:focus, a:active {
     text-decoration: none;  /* On enlève la décoration */
-    color: black;
+    color: #000000;
 }
 
 /* "Trouvez votre hébergement..." */
@@ -44,8 +44,7 @@ body {
 /* Prix hébergement */
 .price {
     font-size: 13px;
-    margin: 0px;
-    margin-top: 7px;
+    margin: 7px 0 0px 0;
 }
 
 /* Quand un prix est bas */
@@ -57,26 +56,24 @@ body {
 .rating {
     display: flex;
     justify-content: space-between;
-    margin: 0px;
-    margin-top: 10px;
+    margin: 10px 0 0 0;
     width: 68px;
     font-size: 12px;
     color: #0065FC;
 }
+
 
 /* || HEADER */
 
 header {
     display: flex;
     justify-content: space-between; /* Pour avoir le logo tout à gauche et le nav tout à droite */
-    margin-left: 50px;
-    margin-right: 50px;
+    margin: 0 50px 0 50px;
 }
 
 /* Logo */
 header img {
-    margin-top: 45px;
-    margin-left: 15px;
+    margin: 45px 0 0 45px;
     width: 95.5px;
     height: 45px;
 }
@@ -92,29 +89,24 @@ header nav ul {
 }
 
 header nav ul li {
-    padding-top: 45px;  /* Permet d'avoir la bordure tout en haut */
-    padding-left: 22px;
-    padding-right: 22px;
+    padding: 45px 22px 0px 22px;    /* Permet d'avoir la bordure tout en haut */
     border-top: 2px solid transparent;  /* Evite le décalage du texte lors du hover */
 }
 
 /* Bordure devient bleu quand la souris passe sur le li */
-header nav ul li:hover {
+header li:hover {
     border-top: 2px solid #0065FC;
 }
 
 /* Hébergements et Activités deviennent bleu au passage de la souris */
-header nav ul li:hover a {
+header li:hover a {
     color: #0065FC;
 }
 
 
 /* || MAIN */
 main {
-    margin-top: 32px;
-    margin-bottom: 25px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin: 32px 50px 25px 50px;
 }
 
 /* "En plein centre ville..." */
@@ -129,8 +121,7 @@ main {
 .search-bar {
     height: 50px;
     width: 414px;
-    margin-top: 18px;
-    margin-bottom: 30px;
+    margin: 18px 0 30px 0;
     display: flex;
     border-top: 1px solid #F2F2F2;
     border-bottom: 1px solid #F2F2F2;
@@ -158,7 +149,7 @@ main {
 .search-button {
     font-size: 16px;
     font-weight: bold;
-    color: white;
+    color: #ffffff;
     width: 128px;
     border-top-right-radius: 20px 20px; /* On arrondit l'angle supérieur droit */
     border-bottom-right-radius: 20px 20px;  /* On arrondit l'angle inférieur droit */
@@ -188,8 +179,7 @@ main {
 .filters-results {
     height: 112px;
     max-width: 929px;
-    margin-left: 9px;
-    margin-right: 9px;
+    margin: 0 9px 0 9px;
     display: flex;
     flex-wrap: wrap;    /* Permettre à la phrase de revenir à la ligne */
     align-items: center;
@@ -205,15 +195,14 @@ main {
 .filters {
     height: 50px;
     border-radius: 100px 100px 100px 100px; /* On arrondit les coins */
-    background-color: white;
-    color: black;
+    background-color: #ffffff;
+    color: #000000;
     border: 2px solid #d9d9d9;
     border-left: 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px;
-    padding-right: 2%;    /* Décalage de la droite pour le texte */
+    padding: 0 2% 0 0;  /* Décalage de la droite pour le texte */
     margin-left: 2%;
     font-weight: bold;
 }
@@ -232,7 +221,7 @@ main {
 
 .filters:hover {
     background-color: #0065FC;
-    color: white;
+    color: #ffffff;
 }
 
 .filters:hover .fa-solid {
@@ -286,9 +275,7 @@ main {
     width: 80%;
     background-color: #F2F2F2;
     border-radius: 20px 20px 20px 20px; /* Arrondi bordure */
-    padding-top: 32px;
-    padding-left: 3%;
-    padding-right: 3%;
+    padding: 0 3% 0 3%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -297,14 +284,14 @@ main {
 /* "Hébergements à Marseille" */
 .lodgings h2 {
     width: 100%;
-    height: 25px;
+    margin-top: 32px;
 }
 
 /* Encadré blanc card hébergement */
 .lodgings a {
     width: 31%;
     height: 199px;
-    background-color: white;
+    background-color: #ffffff;
     border-radius: 20px 20px 20px 20px;
     box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
 }
@@ -331,8 +318,7 @@ main {
 }
 
 .lodging figcaption {
-    margin-bottom: 2%;
-    margin-left: 6%;
+    margin: 0 0 2% 6%;
 }
 
 /* "Afficher plus" */
@@ -349,8 +335,7 @@ main {
     width: 40%;
     background-color: #F2F2F2;
     border-radius: 20px 20px 20px 20px; /* Arrondi bordure */
-    padding-left: 3%;
-    padding-right: 3%;
+    padding: 0 3% 0 3%;
     margin-left: 3%;
     display: flex;
     flex-wrap: wrap;
@@ -360,8 +345,7 @@ main {
 /* "Les plus populaires" */
 .most-popular h2 {
     display: inline-block;
-    margin: 0px;
-    margin-top: 32px;
+    margin: 32px 0 0 0;
 }
 
 /* Etoile "Les plus populaires" */
@@ -375,9 +359,8 @@ main {
 .most-popular a {
     width: 344px;
     height: 140px;
-    background-color: white;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    background-color: #ffffff;
+    margin: 15px 0 15px 0;
     border-radius: 20px 20px 20px 20px;
     box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
 }
@@ -402,9 +385,7 @@ main {
 
 /* Légende card populaire */
 .popular figcaption {
-    margin-top: 20px;
-    margin-left: 6%;
-    margin-right: 10%;
+    margin: 20px 10% 0 6%;
     display: flex;
     flex-direction: column;
 }
@@ -446,7 +427,7 @@ main {
 .all-activities a {
     width: 302px;
     height: 100%;
-    background-color: white;
+    background-color: #ffffff;
     border-radius: 20px 20px 20px 20px;
     box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
 }
@@ -509,9 +490,7 @@ main {
 
 /* Pour chaque légende de card activité */
 .activity figcaption {
-    margin-left: 16px;
-    margin-top: 16px;
-    margin-bottom: 16px;
+    margin: 16px 0 16px 16px;
 }
 
 
@@ -521,12 +500,11 @@ footer {
     height: 230px;
     background-color: #F2F2F2;
     display: flex;
-    padding-left: 50px;
+    padding: 0 50px 0 50px;
 }
 
 footer div {
-    margin-top: 47px;
-    margin-bottom: 52px;
+    margin: 47px 0 52px 0;
     font-size: 15px;
 }
 
